syntax = "proto3";

package incrementValue;
option go_package = "https://github.com/suvihanninen/DistIncrement.git;incrementValue";


service IncrementValue {
    rpc Increment (AddRequest) returns (Response) {}
    rpc GetHeartBeat(BeatRequest)returns (BeatAck){}
    rpc AddToValue(AddRequest) returns (Response){} 
}

message BeatRequest {
    string message = 1;
}

message BeatAck {
    string port = 1;

}

message AddRequest {
    int32 value = 1;
}

message Response {
    int32 response = 1;

}
